web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ewi
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  selector:
    app: ewi
