web-ingress.yaml
# TODO!!: ERR_SSL_VERSION_OR_CIPHER_MISMATCH...
# ---
# apiVersion: networking.gke.io/v1beta1
# kind: ManagedCertificate
# metadata:
#   name: ewi2-certificate
# spec:
#   domains:
#     - ewi.malkut.net
# ---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ewi-ingress
  annotations:
    # TODO!!!: hack for slow dns...
    kubernetes.io/ingress.global-static-ip-name: gitlab-ip-address
    # kubernetes.io/ingress.global-static-ip-name: ewi-ip-address
    # networking.gke.io/managed-certificates: ewi2-certificate
    # kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: ewi
    servicePort: 8080
